# hr-compliance-mcp

./: .dockerignore  .gitignore  .mcp.json  API_DEPLOY.md  CLAUDE.md  Dockerfile  README.md  pyproject.toml  render.yaml
.github/workflows/: ci.yml
hr_compliance_mcp/api/: app.py  auth.py
hr_compliance_mcp/src/: compliance.py  config.py  intelligence.py  leave.py  models.py  server.py  wages.py
hr_compliance_mcp/tests/: test_api.py  test_compliance.py  test_intelligence.py  test_leave.py  test_models.py  test_server.py  test_tier_gating.py  test_wages.py
skill/: SKILL.md
